force-app/main/default/objects/Customer__c/fields/AadharNumber__c.field-meta.xml
<CustomField>
    <fullName>AadharNumber__c</fullName>
    <label>AadharNumber</label>
    <length>25</length>
    <type>Text</type>
</CustomField>