force-app/main/default/objects/Customer__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>AccountType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Account</fullName>
            </value>
            <value>
                <fullName>Saving Account</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>