force-app/main/default/objects/Customer__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>