force-app/main/default/objects/Customer__c/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>