force-app/main/default/objects/Customer__c/listViews/customerdetails.listView-meta.xml
<ListView>
    <fullName>customerdetails</fullName>
    <columns>AadharNumber__c</columns>
    <columns>Account__c</columns>
    <columns>AccountNumber__c</columns>
    <columns>AccountType__c</columns>
    <columns>Branch__c</columns>
    <columns>Credit_Card_Number__c</columns>
    <columns>CVV__c</columns>
    <columns>Email__c</columns>
    <columns>Expiry_Month__c</columns>
    <columns>Expiry_Year__c</columns>
    <columns>Name__c</columns>
    <columns>PAN_Number__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Regional_Manager__c</columns>
    <filterScope>Mine</filterScope>
    <label>customerdetails</label>
</ListView>